# gym_data_processor

./: CMakeLists.txt
include/: data_processor_api.hpp
resources/: process_result.sh
src/: data_parser.cpp  data_parser.hpp  main.cpp  track_handler.cpp  track_handler.hpp  utils.cpp  utils.hpp
